$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-06-24 [A] Added Brazilian language file (user contribution) {eenemeenemuu}
2010-06-24 [B] Fixed uploading to password protected albums in public categories (thread ID 65677) {eenemeenemuu}
2010-06-22 [B] Changed default values for user galleries category (thread ID 65543) {eenemeenemuu}
2010-06-21 [B] Fixed album visibility issue with user galleries (thread ID 65543) {Nibbler}
2010-06-21 [B] Changed fix for category alpha sorting {Nibbler}
2010-06-21 [B] Fixed a critical error with the most viewed meta album {Nibbler}
2010-06-21 [O] Updated French language file (improvement and corrections){Frantz}
2010-06-21 [B] Allow higher port numbers for the site url config setting {Nibbler}
2010-06-18 [B] Fixed display of swf files in Firefox (thread ID 63624) {eenemeenemuu}
2010-06-17 [B] Fixed resizing of watermark backup images (thread ID 65531) {eenemeenemuu}
2010-06-17 [B] Fixed category permissions for secondary user groups (thread ID 65551) {eenemeenemuu}
2010-06-17 [B] Fixed issue when editing user albums (thread ID 65542) {eenemeenemuu}
2010-06-17 [B] Fixed issues with usergal_alphatabs plugin (thread ID 65473 & 65547) {eenemeenemuu}
2010-06-16 [C] Fixed line breaks in contact form emails {eenemeenemuu}
2010-06-15 [D] Removed outdated FAQ items {GauGau}
2010-06-12 [O] Updated Hungarian language file (user contribution) {eenemeenemuu}
2010-06-11 [B] Fixed pre-population of user name on comments form (thread ID 65293) {eenemeenemuu}
2010-06-11 [B] Fixed timeout issue when fetching remote files (thread ID 65424) {eenemeenemuu}